--- a/src/public/css/Style.css
+++ b/src/public/css/Style.css
@@ -66,7 +66,7 @@ li a:hover {
 .social a svg {
     margin-right: 2%;
     margin-top: 10%;
-    justify-content: space-between;
+    justify-content: space-around;
     text-align: center;
     height: 4%;
     width: 4%;
