--- a/src/views/blog.ejs
+++ b/src/views/blog.ejs
@@ -18,7 +18,7 @@
     <% blogs.forEach(blog => { %>
     <div class="card m-4">
         <div class="card-body">
-            <h4 class="text-info card-title"> <%= blog.title %> </h4>
+            <a id="link" href="/blog/<%= blog.slug %>"><h4 class="text-info card-title"> <%= blog.title %> </h4></a>
                 <div class="card-subtitle text-muted mb-2">
                     <%= blog.createdAt.toLocaleDateString("en-BD", { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' }) %>
                 </div>
