--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -8,7 +8,7 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <title>Contact</title>
 </head>
-<body class="container">
+<body class="container mt-4">
     <%- include('_header_') %>
     <form class="container"
   action="https://formspree.io/mjvajyra"
@@ -38,5 +38,7 @@
     <a href="/" class="btn btn-secondary">Cancel</a>
     <button type="submit" class="btn btn-primary">Send</button>
 </form>
+
+<script src="scripts/navbar.js"></script>
 </body>
 </html>
