--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -12,6 +12,7 @@
 </head>
 
 <body class="container">
+    <div class="body">
     <%- include('_header_') %>
     <div class="about container">
 
@@ -107,7 +108,7 @@
 
         <h1>I am <strong>Tawraat.</strong></h1>
         <strong>
-            <p>I am a developer and always interested to learn new things.</p>
+            <p>I am a developer. This is my personal website and I write Blogs for those who are new to programming.</p>
         </strong>
         <a href="/blog?page=1" class="btn btn-primary">Recent Blogs</a>
         <div class="social ml-3">
@@ -118,6 +119,7 @@
     </div>
 
     <script src="scripts/navbar.js"></script>
+    </div>
 </body>
 
 </html>
