--- a/src/views/showBlog.ejs
+++ b/src/views/showBlog.ejs
@@ -15,6 +15,7 @@
 </head>
 
 <body class="container">
+    <div class="body mt-3">
     <nav>
         <div class="burger">
             <div class="line1 text-primary"></div>
@@ -40,5 +41,6 @@
     <script src="/scripts/showBlogNav.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
+    </div>
 </body>
 </html>
