--- a/src/public/css/Style.css
+++ b/src/public/css/Style.css
@@ -116,6 +116,11 @@ li a:hover {
 }
 
 @media only screen and (max-width:600px) {
+
+    .about {
+        margin-top: 27%;
+    }
+
     .about strong p {
         width: 100%;
         margin-left: 0%;
