--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="google-site-verification" content="YcNaNOpzLleNyaGWM_0LG1Bg3ZeXwqa2XjypnQpOKA8" />
     <link href="/css/Style.css" rel="stylesheet">
     <link rel="icon" href="https://img.icons8.com/plasticine/100/000000/blog.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
