--- a/src/views/showBlog.ejs
+++ b/src/views/showBlog.ejs
@@ -29,7 +29,7 @@
             <li class="mr-3 mb-2"><a href="/contact">CONTACT</a></li>
         </ul>
     </nav>
-    <div class="blog-body mt-3">
+    <div class="blog-body mt-3 mb-3">
         <h2 class="mb-1 text-info"> <%= blog.title %> </h2>
         <div class="text-muted mb-4">
             <%= blog.createdAt.toLocaleDateString("en-BD", { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' }) %>
