--- a/src/views/_header_.ejs
+++ b/src/views/_header_.ejs
@@ -1,13 +1,21 @@
-<nav class="container">
-    <div class="burger">
-        <div class="line1 text-primary"></div>
-        <div class="line2 text-primary"></div>
-        <div class="line3 text-primary"></div>
-    </div>
-  <ul class="nav-links">
-      <li><a href="/contact">CONTACT</a></li>
-      <li><a href="/blog?page=1">BLOGS</a></li>
-      <li><a href="/">HOME</a></li>
-      <li style="float:left"><a href="/"><img src="/logo/logo.png" alt="logo"></a></li>
-  </ul>
-</nav>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="google-site-verification" content="YcNaNOpzLleNyaGWM_0LG1Bg3ZeXwqa2XjypnQpOKA8" />
+<link rel="icon" href="https://img.icons8.com/plasticine/100/000000/blog.png">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/styles/atom-one-dark.min.css">
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-177222124-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-177222124-2');
+</script>
+
+
