--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <%- include('_header_') %>
     <link href="/css/Style.css" rel="stylesheet">
-    <link rel="icon" href="https://img.icons8.com/plasticine/100/000000/blog.png">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <title>Contact</title>
 </head>
 <body class="container mt-4">
-    <%- include('_header_') %>
+    <%- include('_navbar_') %>
     <form class="container"
   action="https://formspree.io/mjvajyra"
   method="POST"
