--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,6 +3,7 @@
 
 <head>
     <%- include('_header_') %>
+    <meta name="google-site-verification" content="YcNaNOpzLleNyaGWM_0LG1Bg3ZeXwqa2XjypnQpOKA8" />
     <link href="/css/Style.css" rel="stylesheet">
     <title>Home</title>
 </head>
