--- a/src/views/showBlog.ejs
+++ b/src/views/showBlog.ejs
@@ -15,7 +15,7 @@
             <div class="line2 text-primary"></div>
             <div class="line3 text-primary"></div>
         </div>
-        <ul class="blog-nav">
+        <ul class="blog-nav ml-4">
             <li class="mr-3 mb-2"><a href="/">HOME</a></li>
             <li class="mr-3 mb-2"><a href="/blog?page=1">BLOGS</a></li>
             <li class="mr-3 mb-2"><a href="/contact">CONTACT</a></li>
