--- a/src/public/css/Style.css
+++ b/src/public/css/Style.css
@@ -49,10 +49,10 @@ li a:hover {
 }
 
 .about {
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     justify-content: center;
-    margin-top: 8%;
+    margin-top: 5%;
     color: rgb(112, 109, 109);
 }
 
@@ -120,7 +120,12 @@ li a:hover {
     }
 
     .about {
-        margin-top: 27%;
+        margin-top: 15%;
+    }
+
+    .about svg{
+        height: 30%;
+        width: 30%;
     }
 
     .about strong p {
