--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -7,21 +7,11 @@
 </head>
 <body class="container mt-4">
     <%- include('_navbar_') %>
-    <form class="container"
-  action="https://formspree.io/mjvajyra"
-  method="POST"
->
+    <form class="container" action="/contact" method="post">
 <div class="form-group">
     <label for="name">Name
         <input type="text" name="name" id="name" class="form-control">
     </label>
-</div>
-
-<div class="form-group">
-  <label for="email">
-    Your email
-    <input type="text" name="client" id="email" class="form-control">
-  </label>
 </div>
 
 <div class="form-group">
